--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@cedrugs/pdf-parse": "^1.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.1",
     "nodemon": "^3.1.11",
     "openai": "^6.16.0",
+    "pdf-parse": "^2.4.5",
+    "tesseract.js": "^7.0.0",
     "uuid": "^13.0.0"
   }
 }
